Added a character superclass along with a basic PC function that moves around on the screen

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <script src="Sprite.js"></script>
 
     <script src="Entity.js"></script>
+    <script src="Character.js"></script>
+    <script src="Player.js"></script>
 
     <script src="update.js"></script>
     <script src="render.js"></script>
