some world logic - array based layers and render based on centered character... offset for smoother movement TODO when we know player character size

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <script src="spatialManager.js"></script>
     <script src="entityManager.js"></script>
+    <script src="maps.js"></script>
+    <script src="worldMap.js"></script>
 
     <script src="Sprite.js"></script>
 
