Added sprites and adjusted character an player for sprites

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>ASTEROIDS!</title>
+    <title>SPACE DUNE CONTRA?
+    </title>
     <style>
       body, * {
         box-sizing: border-box;
@@ -45,6 +46,6 @@
     <script src="imagesPreload.js"></script>
     <script src="main.js"></script>
 
-    <script src="ASTEROIDS.js"></script>
+    <script src="CONTRA.js"></script>
   </body>
 </html>
