Added Collider object, that can be used to check collisions between objects

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="keys.js"></script>
     <script src="handleMouse.js"></script>
 
+    <script src="Collider.js"></script>
     <script src="spatialManager.js"></script>
     <script src="entityManager.js"></script>
     <script src="maps.js"></script>
