--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="Entity.js"></script>
     <script src="Character.js"></script>
     <script src="Player.js"></script>
+    <script src="Bullet.js"></script>
 
     <script src="update.js"></script>
     <script src="render.js"></script>
