More world coordinate stuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       }
       
       body {
-        overflow: hidden;
         display: flex;
         justify-content: center;
       }
@@ -21,6 +20,8 @@
   <body>
     <canvas
       id="myCanvas"
+      width="1366"
+      height="768"
     >
       Sorry, but your browser does not support the HTML5 canvas tag.
     </canvas>
