--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="Entity.js"></script>
     <script src="Character.js"></script>
     <script src="Player.js"></script>
+    <script src="Patrol.js"></script>
     <script src="Bullet.js"></script>
     <script src="maps.js"></script>
     <script src="worldMap.js"></script>
