--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       Sorry, but your browser does not support the HTML5 canvas tag.
     </canvas>
 
+    <script src="./node_modules/howler/dist/howler.js"></script>
+    <script src="Audio.js"></script>
     <script src="globals.js"></script>
     <script src="consts.js"></script>
     <script src="util.js"></script>
@@ -52,6 +54,7 @@
     <script src="recording.js"></script>
     <script src="RecordingPlayer.js"></script>
     <script src="main.js"></script>
+    <script src="g_start.js"></script>
 
     <script src="CONTRA.js"></script>
   </body>
