Tilesheet update, laser sounds, rudementary background addition for the lulz

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <script src="recording.js"></script>
     <script src="RecordingPlayer.js"></script>
     <script src="main.js"></script>
-    <script src="g_start.js"></script>
+    <script src="Intro.js"></script>
 
     <script src="CONTRA.js"></script>
   </body>
