--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <script src="Character.js"></script>
     <script src="Player.js"></script>
     <script src="Patrol.js"></script>
+    <script src="AirPatrol.js"></script>
     <script src="Bullet.js"></script>
     <script src="Death.js"></script>
     <script src="Explosion.js"></script>
