--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <script src="Player.js"></script>
     <script src="Patrol.js"></script>
     <script src="AirPatrol.js"></script>
+    <script src="Charger.js"></script>
     <script src="Bullet.js"></script>
     <script src="Death.js"></script>
     <script src="Explosion.js"></script>
