--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <script src="Patrol.js"></script>
     <script src="AirPatrol.js"></script>
     <script src="Charger.js"></script>
+    <script src="Pursuer.js"></script>
     <script src="Bullet.js"></script>
     <script src="Death.js"></script>
     <script src="Explosion.js"></script>
