Added minimalistic hud

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <script src="Explosion.js"></script>
     <script src="maps.js"></script>
     <script src="worldMap.js"></script>
+    <script src="Hud.js"></script>
 
     <script src="update.js"></script>
     <script src="render.js"></script>
