--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <script src="Bullet.js"></script>
     <script src="Death.js"></script>
     <script src="Explosion.js"></script>
+    <script src="Powerup.js"></script>
     <script src="maps.js"></script>
     <script src="worldMap.js"></script>
     <script src="Hud.js"></script>
