--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <script src="Death.js"></script>
     <script src="Explosion.js"></script>
     <script src="Powerup.js"></script>
+    <script src="Coin.js"></script>
     <script src="maps.js"></script>
     <script src="worldMap.js"></script>
     <script src="Hud.js"></script>
