Added Crawler and Walker enemies. Added sounds for powerups and collectibles. Added Big Walker.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     <script src="AirPatrol.js"></script>
     <script src="Charger.js"></script>
     <script src="Pursuer.js"></script>
+    <script src="Walker.js"></script>
+    <script src="Crawler.js"></script>
     <script src="Bullet.js"></script>
     <script src="Death.js"></script>
     <script src="Explosion.js"></script>
