Added functionality for game over

--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
     <script src="Explosion.js"></script>
     <script src="Powerup.js"></script>
     <script src="Coin.js"></script>
+    
     <script src="maps.js"></script>
     <script src="worldMap.js"></script>
     <script src="Hud.js"></script>
+    <script src="gameOver.js"></script>
 
     <script src="update.js"></script>
     <script src="render.js"></script>
