Added level transitions

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <script src="RecordingPlayer.js"></script>
     <script src="main.js"></script>
     <script src="Intro.js"></script>
+    <script src="levelTransition.js"></script>
 
     <script src="CONTRA.js"></script>
   </body>
