--- a/index.html
+++ b/index.html
@@ -16,38 +16,26 @@
       <div class="clouds"></div>
     </div>
 
-    <div 
-      id = 'devtools'
-      style =
-        '
-        background-color: azure;
-        border-radius: 4px;
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        padding: 16px;
-        top: 30vh;
-        z-index: 100;
-        '
-    >
+    <div id="devtools" class="devtools">
       <h1>Developer tools</h1>
       <div>
         <label for="showCharCollsionWithWorld">Character Collision</label>
-        <input id="showCharCollsionWithWorld" type="checkbox"/>
+        <input id="showCharCollsionWithWorld" type="checkbox" />
       </div>
       <div>
         <label for="collisionRender">Render Collision Volumes</label>
-        <input id="collisionRender" type="checkbox"/>
+        <input id="collisionRender" type="checkbox" />
       </div>
       <div>
         <label for="indexWorldCoordinates">Index world coorinates</label>
-        <input id="indexWorldCoordinates" type="checkbox"/>
+        <input id="indexWorldCoordinates" type="checkbox" />
       </div>
       <div>
         <label for="enableInvincibility">Enable invincibility</label>
-        <input id="enableInvincibility" type="checkbox"/>
+        <input id="enableInvincibility" type="checkbox" />
       </div>
-      <button onclick="
+      <button
+        onclick="
         let collisionWithWorld = document.getElementById('showCharCollsionWithWorld');
         g_char_debug_showCollisions = collisionWithWorld.checked;
         let collisionRender = document.getElementById('collisionRender');
@@ -57,7 +45,10 @@
         let invincibility = document.getElementById('enableInvincibility');
         g_player_debug_enableInvincibility = invincibility.checked;
         document.getElementById('devtools').style.display = 'none';
-      ">Apply</button>
+      "
+      >
+        Apply
+      </button>
     </div>
 
     <script src="./node_modules/howler/dist/howler.js"></script>
@@ -88,7 +79,7 @@
     <script src="Explosion.js"></script>
     <script src="Powerup.js"></script>
     <script src="Coin.js"></script>
-    
+
     <script src="maps.js"></script>
     <script src="worldMap.js"></script>
     <script src="Hud.js"></script>
