Shop update + some small tweaks with level transition

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <script src="./node_modules/howler/dist/howler.js"></script>
     <script src="Audio.js"></script>
     <script src="globals.js"></script>
+    <script src="Shop.js"></script>
     <script src="consts.js"></script>
     <script src="util.js"></script>
     <script src="keys.js"></script>
