--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         Sorry, but your browser does not support the HTML5 canvas tag.
       </canvas>
 
+      <canvas class="shop" id="myShopCanvas" width="1366" height="768">
+      </canvas>
+
       <div class="stars"></div>
       <div class="twinkling"></div>
       <div class="clouds"></div>
