--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>SPACE DUNE CONTRA?</title>
+    <title>SPACE CONTRA</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -55,52 +55,50 @@
     </div>
 
     <script src="./node_modules/howler/dist/howler.js"></script>
-    <script src="Audio.js"></script>
-    <script src="globals.js"></script>
-    <script src="Shop.js"></script>
-    <script src="consts.js"></script>
-    <script src="util.js"></script>
-    <script src="keys.js"></script>
-    <script src="handleMouse.js"></script>
+    <script src="./js/Misc/globals.js"></script>
+    <script src="./js/Misc/util.js"></script>
+    <script src="./js/Misc/keys.js"></script>
+    <script src="./js/Misc/handleMouse.js"></script>
+    <script src="./js/Misc/spatialManager.js"></script>
+    <script src="./js/Misc/imagesPreload.js"></script>
 
-    <script src="Collider.js"></script>
-    <script src="spatialManager.js"></script>
-    <script src="entityManager.js"></script>
+    <script src="./js/Entities/Collider.js"></script>
+    <script src="./js/Entities/Sprite.js"></script>
+    <script src="./js/Entities/Entity.js"></script>
+    <script src="./js/Entities/Character.js"></script>
+    <script src="./js/Entities/Player.js"></script>
+    <script src="./js/Entities/Enemies/Patrol.js"></script>
+    <script src="./js/Entities/Enemies/AirPatrol.js"></script>
+    <script src="./js/Entities/Enemies/Charger.js"></script>
+    <script src="./js/Entities/Enemies/Pursuer.js"></script>
+    <script src="./js/Entities/Enemies/Walker.js"></script>
+    <script src="./js/Entities/Enemies/Crawler.js"></script>
+    <script src="./js/Entities/Bullet.js"></script>
+    <script src="./js/Entities/Death.js"></script>
+    <script src="./js/Entities/Explosion.js"></script>
+    <script src="./js/Entities/Powerup.js"></script>
+    <script src="./js/Entities/Coin.js"></script>
+    <script src="./js/Entities/entityManager.js"></script>
 
-    <script src="Sprite.js"></script>
+    <script src="./js/Maps/level1.js"></script>
+    <script src="./js/Maps/level2.js"></script>
+    <script src="./js/Maps/maps.js"></script>
+    <script src="./js/Maps/worldMap.js"></script>
+    <script src="./js/Maps/levelTransition.js"></script>
 
-    <script src="Entity.js"></script>
-    <script src="Character.js"></script>
-    <script src="Player.js"></script>
-    <script src="Patrol.js"></script>
-    <script src="AirPatrol.js"></script>
-    <script src="Charger.js"></script>
-    <script src="Pursuer.js"></script>
-    <script src="Walker.js"></script>
-    <script src="Crawler.js"></script>
-    <script src="Bullet.js"></script>
-    <script src="Death.js"></script>
-    <script src="Explosion.js"></script>
-    <script src="Powerup.js"></script>
-    <script src="Coin.js"></script>
+    <script src="./js/GameLoop/Audio.js"></script>
+    <script src="./js/GameLoop/Shop.js"></script>
+    <script src="./js/GameLoop/Hud.js"></script>
+    <script src="./js/GameLoop/gameOver.js"></script>
 
-    <script src="Maps/level1.js"></script>
-    <script src="Maps/level2.js"></script>
-    <script src="maps.js"></script>
-    <script src="worldMap.js"></script>
-    <script src="Hud.js"></script>
-    <script src="gameOver.js"></script>
+    <script src="./js/GameLoop/update.js"></script>
+    <script src="./js/GameLoop/render.js"></script>
 
-    <script src="update.js"></script>
-    <script src="render.js"></script>
+    <script src="./js/GameLoop/recording.js"></script>
+    <script src="./js/GameLoop/RecordingPlayer.js"></script>
+    <script src="./js/GameLoop/main.js"></script>
+    <script src="./js/GameLoop/Intro.js"></script>
 
-    <script src="imagesPreload.js"></script>
-    <script src="recording.js"></script>
-    <script src="RecordingPlayer.js"></script>
-    <script src="main.js"></script>
-    <script src="levelTransition.js"></script>
-    <script src="Intro.js"></script>
-
-    <script src="CONTRA.js"></script>
+    <script src="./js/GameLoop/CONTRA.js"></script>
   </body>
 </html>
