ugly as fuck level 3 concept, offset coordinates of pursuer aiming and shot

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
     <script src="./js/Maps/level1.js"></script>
     <script src="./js/Maps/level2.js"></script>
+    <script src="./js/Maps/level3.js"></script>
     <script src="./js/Maps/maps.js"></script>
     <script src="./js/Maps/worldMap.js"></script>
     <script src="./js/Maps/levelTransition.js"></script>
